fix: bg fully fits the page and removed the x scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,23 @@
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: url("./bg.png") center center/cover no-repeat;
+  overflow-x: hidden;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .MuiDropzoneArea-root {
-	background-color: transparent !important;
+  background-color: transparent !important;
 }
-.MuiDropzoneArea-text, .MuiDropzoneArea-icon {
+.MuiDropzoneArea-text,
+.MuiDropzoneArea-icon {
   color: white !important;
 }
